--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.16",
-    "@tippyjs/react": "^4.2.6",
     "firebase": "^12.6.0",
+    "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4",
+    "react-router-dom": "^7.11.0",
+    "react-tooltip": "^5.30.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.16"
   },
