--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,15 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.16",
     "firebase": "^12.6.0",
+    "lenis": "^1.3.17",
     "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.11.0",
+    "react-slick": "^0.31.0",
     "react-tooltip": "^5.30.0",
-    "swiper": "^12.0.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
