--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.16",
     "firebase": "^12.6.0",
+    "jspdf": "^4.1.0",
     "lenis": "^1.3.17",
     "primereact": "^10.9.7",
     "react": "^19.1.1",
